src/test/deca/context/valid/LE/UseExtendsClassInMain.deca
// Description:
//    test les methods dans le main
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    
    int ajoute(int x){
        x = x +1;
        return x;
    }
}

class B extends A{

}

{
    int x = 5;
    B y = new B();
    x = y.ajoute(x);
}